[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["xneoSavage <68568486+xneoSavage@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.0"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
psycopg2 = "^2.9.3"
pandas = "^1.4.3"
Flask-JWT-Extended = "^4.4.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
